[tool.poetry]
name = "mongo"
version = "0.1.0"
description = ""
authors = ["Howard Guo <50100922+toto6038@users.noreply.github.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
pymongo = "^4.3.3"
Flask = "^2.2.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
